[metadata]
name = python-lkvm
summary = Library for lkvm
description-file =
    README.rst
author = Obed N Munoz
author-email = obed.n.munoz@intel.com
home-page =
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
